# steer-audio

./: .coveragerc  .gitignore  CLAUDE.md  CLAUDE_STEER_AUDIO_PROMPTS.md  CONTRIBUTING.md  README.md  README_SPACE.md  TADA_Build_Roadmap.md  pyproject.toml  pytest.ini
configs/: base.yaml  compute_caa.yaml  eval_audio.yaml  generate_audio_patch.yaml  sae_train.yaml
demo/: __init__.py  app.py  requirements_space.txt
docs/: results_summary.md  scaling_real_runs.md
editing/: eval_medley.py
experiments/: __init__.py  concept_algebra_demo.py  eval_sweep.py  multi_concept_experiment.py  phase2_integration.py  sae_scaling.py  self_monitor_experiment.py  timestep_schedule_experiment.py  vector_geometry.py
notebooks/: quickstart.ipynb
requirements/: install.sh  requirements_1.txt  requirements_2.txt
sae/: tfidf_utils.py
scripts/: analyze_concept_geometry.py  compute_css_metric.py  compute_fad_human_eval.py  run_paper_experiments.py  run_phase5_1.py  run_phase5_2.py  run_sae_scaling_real_small.sh  score_human_eval_muq_clap.py  score_human_eval_muq_mulan.py  setup_runpod_env.sh  smoke_test.py
src/: constants.py  eval_audio.py  eval_audio_prompts.py  patch_layers.py  patching_utils.py
steer_audio/: __init__.py  cli.py  concept_algebra.py  eval_metrics.py  hub.py  multi_steer.py  pipeline.py  self_monitor.py  temporal_steering.py  vector_bank.py
steering/: caa_utils.py
tests/: conftest.py  test_caa_steering.py  test_cli.py  test_concept_algebra.py  test_config.py  test_demo_app.py  test_eval_metrics.py  test_integration_phase2.py  test_multi_steer.py  test_sae.py  (+7 more)
(+469 files in other folders)
